<resources>
    <string name="app_name">Chatter</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log in</string>
    <string name="enter_phNumber">Enter phone number</string>
    <string name="enter_phNumber_login">Enter your phone number</string>
    <string name="phNumber_editText"> +92 </string>
    <string name="continueBtn">Continue</string>
    <string name="or"> ------------ or ------------- </string>
    <string name="ctnWFB">Continue with Facebook</string>
    <string name="ctnWG">Continue with Google</string>
    <string name="backToSignIn">Already have an Account?</string>
    <string name="backToSignUp">Don\'t have an Account?</string>
    <string name="signin">SignIn</string>
    <string name="ask_number">Enter your number</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter your password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="only_Number">Should only contains numbers</string>


</resources>