<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/enterPhNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_phNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp" />

    <TextView
        android:id="@+id/phNumberHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterPhNumber" />

    <EditText
        android:id="@+id/phNumber_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phNumber_editText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phNumberHeading"/>

    <Button
        android:id="@+id/continueBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continueBtn"
        app:layout_constraintTop_toBottomOf="@+id/phNumber_editText"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/continueBtn"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/ctnWFB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ctnWFB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/or"/>

    <Button
        android:id="@+id/ctnWG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ctnWG"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ctnWFB"/>

</androidx.constraintlayout.widget.ConstraintLayout>