<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="#FEFEFE"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity">

    <TextView
        android:id="@+id/logIn_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/image"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:src="@drawable/login_second"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/logIn_text"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"/>

    <TextView
        android:id="@+id/ph_num_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_phNumber"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/image"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ph_num_edit_text_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="  "
        app:cursorColor="#98A5ED"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/ph_num_text"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ph_num_edit_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/enter_phNumber_login"
            android:textColor="#757FB8"
            android:inputType="phone"
            android:autofillHints="phone"
            android:maxLength="11"
            android:drawableStart="@drawable/custom_phone_logo"
            android:drawablePadding="15dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:background="@drawable/edit_text_custom"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/ph_num_edit_text_layout"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_edit_text_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="  "
        app:cursorColor="#98A5ED"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@id/password_text"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/enter_password"
            android:textColor="#757FB8"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:maxLength="12"
            android:drawableStart="@drawable/custom_lock"
            android:drawablePadding="15dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:background="@drawable/edit_text_custom" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="#98A5ED"
        app:layout_constraintTop_toBottomOf="@+id/password_edit_text_layout"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:background="@drawable/custom_btn_blue"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/login_button"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backToSignUp"/>

        <TextView
            android:id="@+id/signUp_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="#98A5ED"
            android:paddingStart="5dp"/>
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="40dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="40dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>